--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SimpleRecorder"
         tools:targetApi="32">
+        <service
+            android:name=".RecordService"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity
             android:name=".RecordActivity"
             android:exported="false" />
